[package]
name = "ope"
version.workspace = true
edition.workspace = true

[dependencies]
serde_json = { version = "1.0", features = ["raw_value"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
regex = "1.10"
validator = { version = "0.20", features = ["derive"] }
tracing = "0.1"
lru = "0.16"

cidr-utils = "0.6"
